<resources>
    <string name="app_name">Instagram</string>
    <string name="login_label">Log In</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="password_label">password</string>
    <string name="username_label">username</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">dxM81CXf9Ex7ZQ5gmG0WudkUXStPE0KGyCFI7ECd</string>
    <string name="back4app_client_key">K2EWQkxTUku11NSHlh3DdG16IefOqG4w1rKpcoYQ</string>
    <string name="logout_label">Logout</string>
    <string name="post_label">Post</string>
    <string name="take_picture_label">Take Picture</string>
    <string name="description_label">Description</string>
    <string name="likes_label">%s likes</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts_label">posts</string>
</resources>