<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="371dp"
        android:layout_height="173dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_label"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTakeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_picture_label"
        app:layout_constraintEnd_toEndOf="@+id/ivImage"
        app:layout_constraintStart_toStartOf="@+id/ivImage"
        app:layout_constraintTop_toBottomOf="@+id/etDescription"
        tools:text="Take Picture" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="@+id/etDescription"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/etDescription"
        app:layout_constraintTop_toBottomOf="@+id/btnTakeImage"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        tools:text="Post" />
</androidx.constraintlayout.widget.ConstraintLayout>