<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PostFragment">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_label"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/btnTakeImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintTop_toTopOf="@+id/ivImage" />

    <Button
        android:id="@+id/btnTakeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue_ui"
        android:fontFamily="@font/roboto"
        android:text="@string/take_picture_label"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/ivImage"
        app:layout_constraintStart_toStartOf="@+id/ivImage"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        tools:text="Take Picture" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="141dp"
        android:layout_height="123dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue_ui"
        android:fontFamily="@font/roboto"
        android:text="@string/post_label"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/etDescription"
        app:layout_constraintStart_toStartOf="@+id/ivImage"
        app:layout_constraintTop_toBottomOf="@+id/etDescription"
        tools:text="Post" />

</androidx.constraintlayout.widget.ConstraintLayout>